credential requesting functionality

--- a/flask_app/templates/credentials_error.html
+++ b/flask_app/templates/credentials_error.html
@@ -1,5 +1,5 @@
 {% extends 'nav_bar.html' %}
-{% block title %}Dashboard{% endblock title %}
+{% block title %}Access Denied{% endblock title %}
 {% block main %}
     <div class="container text-center">
         <h1>Credentials Error</h1>
