--- a/flask_app/templates/nav_bar.html
+++ b/flask_app/templates/nav_bar.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <nav class="d-flex justify-content-between align-items-center mx-3">
+    <nav class="d-flex justify-content-between align-items-center container">
         <h1>Welcome, {{session.employee_name}}!</h1>
         <div class="d-flex align-items-center gap-3">
             <a href="/dashboard">Inventory</a>
