--- a/flask_app/templates/manufacturers_dash.html
+++ b/flask_app/templates/manufacturers_dash.html
@@ -17,7 +17,7 @@
                     <td>{{ea_manufacturer.id}}</td>
                     <td>{{ea_manufacturer.name}}</td>
                     <td>{{ea_manufacturer.address.state}}</td>
-                    <td><a href="/manufacturers/{{ea_manufacturer.id}}/edit" class="btn btn-info">Adjust</a></td>
+                    <td><a href="/manufacturers/{{ea_manufacturer.id}}/edit" class="btn btn-info">Edit</a></td>
                 </tr>
             {% endfor %}
         </tbody>
