--- a/flask_app/templates/customer_edit.html
+++ b/flask_app/templates/customer_edit.html
@@ -1,9 +1,9 @@
 {% extends 'nav_bar.html' %}
-{% block title %}Edit Manufacturer{% endblock title %}
+{% block title %}Edit Customer{% endblock title %}
 {% block main %}
     <div class="container text-center">
-        <h1>Edit Manufacturer</h1>
-    <form action="/manufacturers/{{to_edit.id}}//update" method="post">
+        <h1>Edit Customer</h1>
+    <form action="/customers/{{to_edit.id}}//update" method="post">
         <div class="mb-3">
             <label for="name">Name</label>
             <input type="text" name="name" id="name" value="{{to_edit.name}}">
@@ -31,7 +31,7 @@
         </div>
         <input type="hidden" name="address_id" value="{{to_edit.address_id}}">
         <button class="btn btn-primary mb-3">Update</button>
-        <a href="/manufacturers" class="btn btn-danger mb-3">Cancel</a>
+        <a href="/customers" class="btn btn-danger mb-3">Cancel</a>
         {% for message in get_flashed_messages() %}
             <p class="text-danger">{{message}}</p>
         {% endfor %}
