--- a/flask_app/templates/sales_edit.html
+++ b/flask_app/templates/sales_edit.html
@@ -15,7 +15,7 @@
             <label for="quantity">QTY</label>
             <input type="number" name="quantity" id="quantity">
             <button class="btn btn-info rounded">+</button>
-            {% for message in get_flashed_messages() %}
+            {% for message in get_flashed_messages(category_filter=['new_line']) %}
                 <p class="text-danger">{{message}}</p>
             {% endfor %}
         </form>
@@ -33,12 +33,27 @@
                 <tr>
                     <td>{{item.stock_item}}</td>
                     <td>{{item.ordered_quantity}}</td>
-                    <td>tbd</td>
-                    <td>tbd</td>
+                    <td>
+                        <form action="/sales/{{to_edit.id}}/adjust_order_line/{{item.id}}" method="post">
+                            <label for="ordered_quantity">New Qty</label>
+                            <input type="number" name="ordered_quantity" id="ordered_quantity">
+                            <button class="btn btn-primary">Update</button>
+                            {% for message in get_flashed_messages(category_filter=['qty'+(item.id|string)]) %}
+                                <p class="text-danger">{{message}}</p>
+                            {% endfor %}
+                        </form>
+                    </td>
+                    <td>
+                        <form action="/sales/{{to_edit.id}}/remove_order_line/{{item.id}}" method="post"
+                        onsubmit="removeHandler(event, '{{item.stock_item}}')">
+                            <button class="btn btn-danger">Remove</button>
+                        </form>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
 
     </div>
+    <script type="text/javascript" src="{{ url_for('static', filename='remove_script.js') }}"></script>
 {% endblock main %}
