--- a/flask_app/templates/sales_edit.html
+++ b/flask_app/templates/sales_edit.html
@@ -53,7 +53,8 @@
                 {% endfor %}
             </tbody>
         </table>
-
+        <a href="/sales/{{to_edit.id}}/finalize" class="btn btn-danger" onclick="finalizeHandler(event)">Finalize (Mark ready to ship)</a>
+        <a href="/sales/{{to_edit.id}}/cancel" class="btn btn-danger" onclick="cancelHandler(event)">Cancel Entire Order</a>
     </div>
     <script type="text/javascript" src="{{ url_for('static', filename='remove_script.js') }}"></script>
 {% endblock main %}
