--- a/flask_app/templates/sales_ship.html
+++ b/flask_app/templates/sales_ship.html
@@ -14,7 +14,7 @@
                     <th>Item</th>
                     <th>Ordered</th>
                     <th>Shipped</th>
-                    <th>Not Shipped</th>
+                    <th>Balance</th>
                     <th>On Hand</th>
                 </tr>
             </thead>
@@ -32,7 +32,12 @@
                                 {% endfor %}
                             </form>
                         </td>
-                        <td>{{item.ordered_quantity - item.shipped_quantity}}</td>
+                        <td>
+                            {{item.ordered_quantity - item.shipped_quantity}}
+                        {% if item.ordered_quantity - item.shipped_quantity < 0 %}
+                            <span class="text-danger">OVERSHIPPED</span>
+                        {% endif %}
+                        </td>
                         <td>{{item.on_hand}}</td>
                     </tr>
                 {% endfor %}
