--- a/flask_app/templates/sales_view.html
+++ b/flask_app/templates/sales_view.html
@@ -11,7 +11,7 @@
                     <th>Item</th>
                     <th>Ordered</th>
                     <th>Shipped</th>
-                    <th>Not Shipped</th>
+                    <th>Back Ordered</th>
                     <th>On Hand</th>
                 </tr>
             </thead>
@@ -21,7 +21,11 @@
                         <td>{{item.stock_item}}</td>
                         <td>{{item.ordered_quantity}}</td>
                         <td>{{item.shipped_quantity}}</td>
-                        <td>{{item.ordered_quantity - item.shipped_quantity}}</td>
+                        <td>
+                            {{item.ordered_quantity - item.shipped_quantity}}
+                            {% if item.ordered_quantity - item.shipped_quantity < 0 %}
+                                <span class="text-danger">OVERSHIPPED</span>
+                            {% endif %}</td>
                         <td>{{item.on_hand}}</td>
                     </tr>
                 {% endfor %}
