purchase order entry

--- a/flask_app/templates/nav_bar.html
+++ b/flask_app/templates/nav_bar.html
@@ -13,7 +13,7 @@
         <div class="d-flex align-items-center gap-3">
             <a href="/dashboard">Inventory</a>
             <a href="/sales">Sales</a>
-            <a href="/orders">Orders</a>
+            <a href="/purchasing">Orders</a>
             <a href="/auth">Auth</a>
             <a href="/employees/logout">Logout</a>
         </div>
