last updated on po page

--- a/flask_app/templates/purchasing_view.html
+++ b/flask_app/templates/purchasing_view.html
@@ -35,5 +35,6 @@
             </tbody>
         </table>
         {% endif %}
+        <h3>Status updated: {{one_order.updated_at.strftime('%B %d, %Y at %I:%M%p')}}</h3>
     </div>
 {% endblock main %}
