--- a/flask_app/templates/nav_bar.html
+++ b/flask_app/templates/nav_bar.html
@@ -10,12 +10,12 @@
 <body>
     <nav class="d-flex justify-content-between align-items-center container">
         <h1>Welcome, {{session.employee_name}}!</h1>
-        <div class="d-flex align-items-center gap-1">
-            <a href="/dashboard">Inventory</a>
-            <a href="/sales">Sales</a>
-            <a href="/purchasing">Orders</a>
-            <a href="/auth">Auth</a>
-            <a href="/auth/admin">Admin</a>
+        <div class="d-flex align-items-center gap-2">
+            <a href="/dashboard">Inventory</a> |
+            <a href="/sales">Sales</a> |
+            <a href="/purchasing">Orders</a> |
+            <a href="/auth">Auth</a> |
+            <a href="/auth/admin">Admin</a> |
             <a href="/employees/logout">Logout</a>
         </div>
     </nav>
