--- a/flask_app/templates/auth.html
+++ b/flask_app/templates/auth.html
@@ -2,6 +2,7 @@
 {% block title %}Access{% endblock title %}
 {% block main %}
 <div class="container">
+    <h2>Request Access</h2>
     {% for message in get_flashed_messages() %}
     <p class="text-danger">{{message}}</p>
     {% endfor %}
