--- a/flask_app/templates/auth_admin.html
+++ b/flask_app/templates/auth_admin.html
@@ -5,7 +5,7 @@
     {% for message in get_flashed_messages() %}
         <p class="text-danger">{{message}}</p>
     {% endfor %}
-    <p>Admin Control Panel</p>
+    <h2>Admin Control Panel</h2>
     <table class="table-striped table">
         <thead>
             <tr>
