--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -2,6 +2,7 @@
 {% block title %}Dashboard{% endblock title %}
 {% block main %}
     <div class="container">
+        <h2>Current Inventory Levels</h2>
     <table class="table table-striped">
         <thead>
             <tr>
