--- a/flask_app/templates/purchasing_dash.html
+++ b/flask_app/templates/purchasing_dash.html
@@ -2,6 +2,7 @@
 {% block title %}Purchase Dashboard{% endblock title %}
 {% block main %}
     <div class="container">
+        <h2>Purchasing Dashboard</h2>
         <div class="d-flex justify-content-left gap-3">
             <a href="/purchasing/new" class="btn btn-info">New Purchase Order</a>
             <a href="/manufacturers" class="btn btn-info">Manage Manufacturers</a>
