--- a/flask_app/templates/customers_dash.html
+++ b/flask_app/templates/customers_dash.html
@@ -2,6 +2,7 @@
 {% block title %}Customers{% endblock title %}
 {% block main %}
     <div class="container">
+    <h2>All Customers</h2>
     <table class="table table-striped">
         <thead>
             <tr>
