nav bar fix labels

--- a/flask_app/templates/nav_bar.html
+++ b/flask_app/templates/nav_bar.html
@@ -12,8 +12,8 @@
         <h1>Welcome, {{session.employee_name}}!</h1>
         <div class="d-flex align-items-center gap-2">
             <a href="/dashboard">Inventory</a> |
-            <a href="/sales">Purchasing</a> |
-            <a href="/purchasing">Orders</a> |
+            <a href="/sales">Sales</a> |
+            <a href="/purchasing">Purchasing</a> |
             <a href="/auth">Auth</a> |
             <a href="/auth/admin">Admin</a> |
             <a href="/employees/logout">Logout</a>
